# filefly

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile.consoomer  Dockerfile.relay-server  README.md  amplify.yml  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.husky/: pre-commit
amplify/: backend.ts
amplify/backend/: tags.json
apps/consoomer/: .env.example  .flake8  .gitignore  .pylintrc  README.md  package.json  pyproject.toml  turbo.json
apps/consoomer/src/consoomer/: __init__.py  __main__.py  secret_encryption.py
apps/docs/: package.json  turbo.json
apps/docs/src/app/: page.tsx
apps/relay-client/: .eslintrc.cjs  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.1723421101204.mjs  electron.vite.config.ts  package.json  tailwind.config.ts  tsconfig.json  turbo.json
apps/relay-client/src/main/: index.ts
apps/relay-client/src/renderer/src/: main.tsx
apps/relay-client/src/renderer/src/assets/: base.css
apps/relay-server/: .env.example  .eslintrc.js  .gitignore  package.json  turbo.json
apps/relay-server/src/: index.ts
apps/web/: .env.example  .gitignore  PROVIDERS.md  package.json  tailwind.config.ts  turbo.json
apps/web/src/: PROVIDERS.md  auth.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/utils/: database.ts  secret-encryption.ts  state-secrets.ts
scripts/: generate_db_encryption_key.sh  init.sh  install_husky_init_nodenv.sh  setup_test_environment_variables.sh
